# Node

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  GitHub Desktop.lnk  HATAF - Chrome.lnk  New Text Document.txt  Notes.txt  PyCharm Community Edition 2022.3.3.lnk  README.md  Slack.lnk  Visual Studio Code.lnk  assas.txt  auth.py  jsc-chatbot-sa.json  knative.yaml  package-lock.json  package.json  pyproject.toml  requirements  requirements.txt  sonar-project.properties  test.sh  test.txt
App/: app.ts  package-lock.json  package.json
App/middleware/: authenticate.ts
App/models/: swagger.json  todo.ts
App/routes/: todo.ts
middleware/: authenticate.ts
models/: swagger.json  todo.ts
pro/: app.ts  package-lock.json  package.json
pro/image/: img.ts
pro/middleware/: blog.ts
pro/models/: blog.ts  user.ts
pro/routes/: authroutes.ts  blog.ts  user.ts
routes/: todo.ts
src/: .env  api.py  index.html  requirements.txt  sandbox.py  test.py  test_api.py  test_model.py
src/business/: __init__.py
src/business/models/: dependencies.py  permissions.py  roles.py  schema_clients.py  schema_groups_role.py  schema_main.py  schema_roles.py  schema_users.py  schemas_groups.py  schemas_groups_users.py  users.py
src/business/providers/: __init__.py  base.py  firebase.py  fusionauth.py  fusionauth2.py  keycloak.py  zeauth.py  zekoderauth.py
src/config/: db.py  mail_config.py  social_config.py
src/core/: AES.py  __init__.py  crud.py  cryptography_fernet.py  logger.py
src/core/db_models/: models.py  schemas.py
src/core/types/: __init__.py  model.py
src/email_service/: mail_service.py
src/email_template/: email_template.py
src/redis_service/: redis_service.py
src/routes/: assignments.py  brokers.py  clients.py  groups.py  permissions.py  roles.py  sandbox.py  users.py  z_brokers.py
src/test_zeauth/: firebase_fixtures.py  keycloak_fixtures.py  test_api.py  test_groups.py  test_login.py  test_resend_confirmation_email.py  test_reset_password.py  test_reset_password_verify.py  test_roles.py  test_users.py
src/test_zeauth/test_firebase_unit_tests/: test_delete_user.py  test_get_and_create_role.py  test_get_user.py  test_list_users.py  test_login_and_signup.py  test_update_user.py  test_user_active_on_off.py  test_verify.py
src/test_zeauth/test_keycloak_unit_tests/: test_login_and_signup.py  test_resend_confirmation_email.py  test_reset_password.py
src/test_zeauth/test_unit_tests/: test_login_and_signup.py  test_resend_confirmation_email.py
src/test_zeauth_unittests/: conftest_db.py  test_root.py
src/test_zeauth_unittests/clients/: test_clients.py
src/test_zeauth_unittests/default/: test_default.py  test_login.py
src/test_zeauth_unittests/groups/: test_groups.py
src/test_zeauth_unittests/main_codes/: test_main.py
src/test_zeauth_unittests/roles/: test_roles.py
src/unit_tests/: test_api.py
(+1 files in other folders)
