[tool.poetry]
name = "zeauth"
version = "0.1.0"
description = "Authentication and authorization endpoints for ZeKoder systems"
authors = ["Cybernetic Labs Lmtd. Skti."]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
firebase-admin = "^5.2.0"
coverage = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
