[tool.poetry]
name = "zeauth"
version = "0.1.0"
description = "Authentication and authorization endpoints for ZeKoder systems"
authors = ["Cybernetic Labs Lmtd. Skti."]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
aiosmtplib = "^1.1.7"
anyio = "^3.5.0"
asgiref = "^3.5.0"
async-timeout = "^4.0.2"
atomicwrites = "^1.4.0"
attrs = "^21.4.0"
blinker = "^1.5"
CacheControl = "^0.12.11"
cachetools = "^5.0.0"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.12"
click = "^8.1.3"
colorama = "^0.4.4"
Deprecated = "^1.2.13"
dnspython = "^2.2.1"
ecdsa = "^0.18.0"
email-validator = "^1.3.0"
fastapi = "^0.75.2"
fastapi-jwt-auth = "^0.5.0"
fastapi-mail = "^1.1.4"
fastapi-pagination = "^0.9.3"
firebase-admin = "^5.2.0"
fusionauth-client = "^1.36.0"
google-api-core = "^2.7.2"
google-api-python-client = "^2.46.0"
google-auth = "^2.6.6"
google-auth-httplib2 = "^0.1.0"
google-cloud-core = "^2.3.0"
google-cloud-firestore = "^2.4.0"
google-cloud-storage = "^2.3.0"
google-crc32c = "^1.3.0"
google-resumable-media = "^2.3.2"
googleapis-common-protos = "^1.56.0"
greenlet = "^1.1.3.post0"
grpcio = "^1.44.0"
grpcio-status = "^1.44.0"
h11 = "^0.12.0"
httpcore = "^0.15.0"
httplib2 = "^0.20.4"
httpx = "^0.23.0"
idna = "^3.3"
iniconfig = "^1.1.1"
Jinja2 = "^3.1.2"
jsonify = "^0.5"
MarkupSafe = "^2.1.1"
mock = "^4.0.3"
msgpack = "^1.0.3"
Naked = "^0.1.31"
oauthlib = "^3.2.2"
packaging = "^21.3"
pluggy = "^1.0.0"
proto-plus = "^1.20.3"
protobuf = "^3.20.1"
py = "^1.11.0"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
pydantic = "^1.9.0"
PyJWT = "^1.7.1"
pyparsing = "^3.0.8"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.8.2"
python-dotenv = "^0.20.0"
python-jose = "^3.3.0"
python-keycloak = "^2.1.1"
PyYAML = "^6.0"
redis = "^4.3.4"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"
requests-toolbelt = "^0.9.1"
rfc3986 = "^1.5.0"
rsa = "^4.8"
six = "^1.16.0"
sniffio = "^1.2.0"
SQLAlchemy = "^1.4.42"
starlette = "^0.17.1"
status = "^0.2.5"
tomli = "^2.0.1"
typing_extensions = "^4.2.0"
uritemplate = "^4.1.1"
urllib3 = "^1.26.9"
uvicorn = "^0.17.6"
wrapt = "^1.14.1"
cryptography = "^38.0.4"
psycopg2-binary = "^2.9.5"


[tool.poetry.dev-dependencies]
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
